re-added extra, unnecessary libraries

--- a/posts/shortassignment2stevenoneill.rmd
+++ b/posts/shortassignment2stevenoneill.rmd
@@ -9,6 +9,8 @@ tags:
 ```{r setup, include=FALSE}
 library(igraph)
 library(statnet)
+library(tidyverse)
+library(lubridate)
 ```
 
 ### Reading in data
