--- a/posts/Assignment_Kpop_network_Erika_Nagai.qmd
+++ b/posts/Assignment_Kpop_network_Erika_Nagai.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Assignment Kpop Collaboration Network"
+title: "Final Project Kpop Collaboration Network"
 author: "Erika Nagai"
-date: "03/28/2023"
+date: "05/20/2023"
 format:
   html:
     toc: true
